[package]
name = "my_library"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rand = { workspace = true }
# optional means Cargo won't include it unless requested
rand_pcg = { workspace = true, optional = true }
rand_xorshift = { workspace = true, optional = true }

[[bench]]
name = "random"
harness = false

[features]
# default feature set
default = [ "pcg" ]
# see dependency names above
pcg = [ "rand_pcg" ]
xorshift = [ "rand_xorshift" ]
