[package]
name = "my_library"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rand = { workspace = true }
# optional means Cargo won't include it unless requested
rand_xorshift = { workspace = true, optional = true }
bevy = { workspace = true }
anyhow = "1.0.100"

[[bench]]
name = "random"
harness = false

[features]
# default feature set
# rand_xorshift is faster than default generator, so use that as default
default = [ "rand_xorshift" ]
# see dependency names above
xorshift = [ "rand_xorshift" ]
locking = []
